# anfisa

./: CMakeLists.txt  README.md
classifier/: cascade-bbf.cpp  cascade-bbf.hpp  cascade-icf.cpp  cascade-icf.hpp  classifier.h  classifier.hpp  decision-tree.cpp  decision-tree.hpp
core/: io-structures.cpp  io-structures.hpp  raw-structures.h
